# vk_hwrt

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/shaders/: geometry.rchit  geometry.rgen  geometry.rmiss  shadow.rmiss
